# cXz

./: .env.example  .gitignore  CLAUDE.md  SETUP.md  debug_discogs.py  pyproject.toml  test_elliott_smith.py
cxz/: __init__.py  main.py
cxz/api/: __init__.py  discogs_service.py  llm_service.py  search_service.py
cxz/data/: __init__.py  database.py
cxz/models/: __init__.py  record.py
cxz/tui/: __init__.py  app.py  app.tcss
cxz/tui/screens/: __init__.py  batch_collection.py  condition_modal.py  search.py
cxz/utils/: discogs_query.py  record_parser.py
examples/: search_example.py
tests/: __init__.py  test_discogs_integration.py  test_elliott_smith_example.py  test_gemini_config.py  test_integration_fixed.py  test_record_parser.py
